--- a/package.json
+++ b/package.json
@@ -1,17 +1,24 @@
 {
   "name": "all.db",
-  "version": "0.2.8",
+  "version": "0.3.0",
   "description": "JSON Database",
-  "main": "all.js",
+  "types": "lib/all.db.d.ts",
+  "main": "lib/all.db",
   "keywords": [
     "Simple",
     "Fast",
     "JSON Database"
   ],
+  "type": "module",
   "author": "NoNametxt",
   "license": "ISC",
   "repository": {
     "type": "git",
     "url": "https://github.com/NoName-txt/all.db"
+  },
+  "devDependencies": {
+    "@types/node": "^22.10.2",
+    "typescript": "^5.7.2",
+    "undici-types": "^7.1.0"
   }
 }
